--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.datasource.password=Nhraogeetha@60
 #JPA settings
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+springdoc.swagger-ui.path=/swagger.html
+
 
