--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8010
+spring.application.name = demoservice
 logging.level.org.springframework=DEBUG
 # MySQL settings
 #Change these settings according to database you are using
